--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -34,12 +34,13 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.6.1",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "graphql": "^16.10.0",
     "graphql-request": "^7.1.2",
     "reflect-metadata": "^0.2.2",
     "viem": "^2.23.9",
-    "zod": "^3.24.2"
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
